# nodewatcher-agent

./: .gitignore  CMakeLists.txt  README.rst  json.c  main.c  module.c  module.h
common/: hmac.c  json.c  module.c  output.c  scheduler.c  sha256.c  utils.c
include/nodewatcher-agent/: hmac.h  json.h  module.h  output.h  scheduler.h  sha256.h  utils.h
modules/: clients.c  general.c  http_push.c  interfaces.c  keys_ssh.c  meshpoint.c  resources.c  routing_babel.c  routing_olsr.c  wireless.c
